hotspots: Fix ``Got It!`` box sizing.
This fix modifies static/styles/hotspots.css to dynamically
resize the ``Got It!`` box that displays when a hotspot
appears. This allows the box to grow and shrink to fit the
phrase ``Got It!`` in multiple languages.
	To do this, it adds padding to the ``Got It!``
content and defines a maximum width and height.

Fixes: #8275

--- a/static/styles/hotspots.css
+++ b/static/styles/hotspots.css
@@ -97,7 +97,7 @@
     position: absolute;
     bottom: 15px;
     right: 15px;
-    max-width: 100px;
+    max-width: 125px;
     max-height: 70px;
 
     border: none;
@@ -108,7 +108,7 @@
     background-color: hsl(164, 44%, 47%);
     border-radius: 4px;
     white-space: normal;
-    padding: 7px;
+    padding: 7px 20px;
 }
 
 /* arrows */
